add button scoring

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="script.js" defer></script>
     <title>Rock Paper Scissors</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Rock paper Scissors:</h1>
-    <p> Play in the console</p>
-</body>
+    <!-- <p> Play in the console</p> -->
+
+    <div class="all-choice">
+      <div class="choice">
+        <img src="" alt="rock" />
+        <button type="submit" id="rock" class="choose">Rock</button>
+      </div>
+
+      <div class="choice">
+        <img src="" alt="Paper" />
+        <button type="submit" id="paper" class="choose">Paper</button>
+      </div>
+
+      <div class="choice">
+        <img src="" alt="Scissors" />
+        <button type="submit" id="scissor" class="choose">Scissors</button>
+      </div>
+    </div>
+  </body>
 </html>
