add winner and new game

--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
         <button type="submit" id="scissor" class="choose">Scissors</button>
       </div>
     </div>
+
+    <div class="score">
+        <div class="user-score"></div>
+        <div class="bot-score"></div>
+    </div>
   </body>
 </html>
